# mvms_2017

./: Alexandr_Kucherov_201735343_Task5.cpp  Alexandr_Kucherov_201735343_Task5.h  Anatoliy_Korovkin_201755322_Task1.cpp  Anatoliy_Korovkin_201755322_Task1.h  Anatoliy_Korovkin_201755322_Task2.cpp  Anatoliy_Korovkin_201755322_Task2.h  Anatoliy_Korovkin_201755322_Task3.cpp  Anatoliy_Korovkin_201755322_Task3.h  Anatoliy_Korovkin_201755322_Task4.cpp  Anatoliy_Korovkin_201755322_Task4.h  Anatoliy_Korovkin_201755322_Task5.cpp  Anatoliy_Korovkin_201755322_Task5.h  CMakeLists.txt  main.cpp  task1.cpp  task1.h  task2.cpp  task3.cpp  task4.cpp  task4.h  task5.cpp
